Table utility bare minimum structure in place
Following the TEMPLATE bare minimum structure, the new `Table' utility's
structure is now in place along with a simple `--information' option which
will later print the table information.

--- a/Makefile.am
+++ b/Makefile.am
@@ -88,6 +88,9 @@ endif
 if COND_SUBTRACTSKY
   MAYBE_SUBTRACTSKY = src/subtractsky
 endif
+if COND_TABLE
+  MAYBE_TABLE = src/table
+endif
 #if COND_TEMPLATE
 #  MAYBE_TEMPLATE = src/TEMPLATE
 #endif
