Table prints contents of a FITS table
Table can now print the contents of a FITS table to the standard
output. There are several options to determine the formatting of the output
when it is printed. Currently for each column on each row a separate printf
statement is issued, the speed is not bad, but there might be more
efficient ways that we will have to work on.

--- a/src/table/asttable.conf
+++ b/src/table/asttable.conf
@@ -18,6 +18,14 @@
 # without any warranty.
 
 # Input:
- hdu            0
+ hdu              0
 
 # Output:
+ feg              f
+ sintwidth        5
+ lintwidth       15
+ floatwidth      10
+ doublewidth     15
+ strwidth        20
+ floatprecision   3
+ doubleprecision  8
