FITS (binary) tables <--> plain text in Table
Table can now convert an ASCII (theoretically, not yet tested) and Binary
FITS table into an ASCII plain text file. It can also convert ASCII plain
text files to binary FITS tables. ASCII FITS tables have a different
`TFORMn' keyword format which made the work a little complicated so it was
not implemented at this time. Maybe later (when the need arises) we can
implement it is not hard, just needs some time (that I don't have now). Two
tests were also written to test these conversions.

Note that Table does have the `--fitstabletype' option to determine the
output FITS table type, but currently if `ascii' is passed to it, it will
inform the user that this is not yet implementend and that they should get
in touch with us so we can implement it.

Within Table, the old `tform' and `ttype' arrays in the `uiparams'
structure were named after the FITS standard keywords. However, these names
can be mis-leading, for example the "TTYPEn" is for the name of the column,
not the data type. So they were renamed to the more appropriate names:
`ttstr' (or table-type-string) and `tname'.

Table can still use a lot of work to greatly improve, in particular to read
plain text files by columns, this work will also benefit the `lib/txtarray'
(and thus all the utitlies that use it). Also once it is mature enough,
utilities that input or output tables/catalogs can do so from FITS
tables. So it would be a very useful work.

It would also be very interesting if we could adopt a human readable
convention to include the column information (for example name, type and
units) in a plain text file (for example as lines starting with `#c') so a
binary table and plain text file can be exactly convertable. Currently they
are not: the ascii to binary operation will read everything only as double.

The following modifications were made compared to previous commits:

 - `lib/checkset.c': A new `gal_checkset_check_file_report' function was
   added to repor

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,12 +42,12 @@ mkprof/ellipticalmasks.sh mkprof/inputascanvas.sh header/write.sh           \
 header/print.sh header/update.sh header/delete.sh imgstat/basicstats.sh     \
 subtractsky/subtractsky.sh noisechisel/noisechisel.sh mkcatalog/simple.sh   \
 mkcatalog/aperturephot.sh arithmetic/snimage.sh arithmetic/onlynumbers.sh   \
-cosmiccal/simpletest.sh
+cosmiccal/simpletest.sh table/asciitobinary.sh table/binarytoascii.sh
 
 EXTRA_DIST = $(TESTS) during-dev.sh mkprof/mkprofcat1.txt                  \
 mkprof/ellipticalmasks.txt mkprof/inputascanvas.txt mkprof/mkprofcat2.txt  \
 mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt mkprof/radeccat.txt            \
-imgcrop/cat.txt
+imgcrop/cat.txt table/asciitobinary.txt
 
 CLEANFILES = *.log *.txt *.jpg *.fits *.pdf *.eps
 
@@ -78,6 +78,8 @@ mkprof/mosaic2.sh: prepconf.sh.log
 mkprof/mosaic3.sh: prepconf.sh.log
 mkprof/mosaic4.sh: prepconf.sh.log
 mkprof/radeccat.sh: prepconf.sh.log
+table/asciitobinary.sh: prepconf.sh.log
+table/binarytoascii.sh: table/asciitobinary.sh.log
 imgcrop/imgcat.sh: mkprof/mosaic1.sh.log
 imgcrop/wcscat.sh: mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log     \
                    mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
