--- a/src/table/Makefile.am
+++ b/src/table/Makefile.am
@@ -28,8 +28,9 @@ bin_PROGRAMS = asttable
 asttable_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 table.c table.h
 
-asttable_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgalconfigfiles -lgalfits -lgalcheckset -lgaltiming -lgallinkedlist
+asttable_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la             \
+-lgalconfigfiles -lgalfits -lgalcheckset -lgaltiming -lgallinkedlist    \
+-lgaltxtarray
 
 
 
