--- a/src/mknoise/Makefile.am
+++ b/src/mknoise/Makefile.am
@@ -29,8 +29,7 @@ astmknoise_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 mknoise.c mknoise.h
 
 astmknoise_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgalconfigfiles -lgalfits -lgalcheckset -lgaltiming -lgalthreads
-
+-lgnuastro
 
 
 
