--- a/src/header/Makefile.am
+++ b/src/header/Makefile.am
@@ -29,8 +29,7 @@ astheader_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 header.c header.h
 
 astheader_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgalconfigfiles -lgalfits -lgalcheckset -lgaltiming -lgallinkedlist
-
+-lgnuastro
 
 
 
