--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -29,9 +29,7 @@ astimgcrop_SOURCES = main.c main.h cite.h ui.c ui.h args.h imgcrop.c	\
 imgcrop.h wcsmode.c wcsmode.h crop.c crop.h
 
 astimgcrop_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la	\
--lgalconfigfiles -lgalwcs -lgalfits -lgaltxtarray -lgalcheckset	\
--lgallinkedlist -lgaltiming -lgalthreads -lgalbox -lgalpolygon
-
+-lgnuastro
 
 
 
