--- a/src/imgstat/Makefile.am
+++ b/src/imgstat/Makefile.am
@@ -29,9 +29,7 @@ astimgstat_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 imgstat.c imgstat.h
 
 astimgstat_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
--lgalconfigfiles -lgalfits -lgalcheckset -lgaltiming -lgallinkedlist	\
--lgalmode -lgalstatistics -lgalarraymanip -lgalqsort
-
+-lgnuastro
 
 
 
