--- a/src/mkcatalog/Makefile.am
+++ b/src/mkcatalog/Makefile.am
@@ -29,9 +29,7 @@ astmkcatalog_SOURCES = main.c main.h cite.h ui.c ui.h args.h          \
 mkcatalog.c mkcatalog.h columns.c columns.h
 
 astmkcatalog_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la       \
--lgalconfigfiles -lgalstatistics -lgalarraymanip -lgalqsort -lgalfits \
--lgalwcs -lgalcheckset -lgaltiming -lgallinkedlist -lgaltxtarray
-
+-lgnuastro
 
 
 
