Updates to .gitignore
After adding the Table utility, its executable was not added to the
.gitignore file. Also since building installable libraries, a new set of
`.libs/' directories have been created in each utility. Both cases have now
been added to `.gitignore'.

The reason they weren't noticed before (at least by me) was that I have
been using the new `tempfs-config-make' script which puts all the built
files and directories in another directory to keep the source files
clean. But for a test recently I didn't use that script and thus noticed
these two cases.

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ snippet
 config.h
 stamp-h1
 Makefile
+asttable
 ltmain.sh
 .dirstamp
 configure
@@ -122,6 +123,7 @@ doc/gnuastro.vrs
 # ignore the whole directory (and everything within it). This is more
 # efficient then leaving it to try to fit patterns.
 
+.libs/
 /gnulib/
 /bootstrapped/
 /doc/plotsrc/tikz/
