Logical operators in Arithmetic
The three logical operators `and', `or' and `not' where added to
Arithmetic, the book was also updated and a test was written for the `or'
operator which is now checked with `make check'.

The explanation for the `where' operator was also made more clear.

The other operator lines in the `reversepolish' function were just adjusted
so all their function names are on the same column to help in reading.

This finishes task #14153.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -54,21 +54,21 @@ version_SOURCES = lib/version.c
 
 
 # The actual test scripts that are run:
-TESTS = prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh mkprof/mosaic3.sh   \
-  mkprof/mosaic4.sh mkprof/radeccat.sh imgcrop/imgcat.sh imgcrop/wcscat.sh  \
-  imgcrop/xcyc.sh imgcrop/xcycnoblank.sh imgcrop/section.sh                 \
-  imgcrop/radec.sh imgcrop/imgpolygon.sh imgcrop/imgoutpolygon.sh           \
-  imgcrop/wcspolygon.sh convertt/fitstotxt.sh convertt/fitstojpeg.sh        \
-  convertt/blankch.sh convertt/jpegtotxt.sh convertt/fitstojpegcmyk.sh      \
-  convertt/jpegtofits.sh convertt/fitstopdf.sh convolve/spatial.sh          \
-  convolve/frequency.sh imgwarp/imgwarp_scale.sh imgwarp/homographic.sh     \
-  mknoise/addnoise.sh mkprof/ellipticalmasks.sh mkprof/inputascanvas.sh     \
-  header/write.sh header/print.sh header/update.sh header/delete.sh         \
-  imgstat/basicstats.sh subtractsky/subtractsky.sh                          \
-  noisechisel/noisechisel.sh mkcatalog/simple.sh mkcatalog/aperturephot.sh  \
-  arithmetic/snimage.sh arithmetic/onlynumbers.sh arithmetic/where.sh       \
-  cosmiccal/simpletest.sh table/asciitobinary.sh table/binarytoascii.sh     \
-  $(check_PROGRAMS)
+TESTS = $(check_PROGRAMS) prepconf.sh mkprof/mosaic1.sh mkprof/mosaic2.sh    \
+  mkprof/mosaic3.sh mkprof/mosaic4.sh mkprof/radeccat.sh imgcrop/imgcat.sh   \
+  imgcrop/wcscat.sh imgcrop/xcyc.sh imgcrop/xcycnoblank.sh                   \
+  imgcrop/section.sh imgcrop/radec.sh imgcrop/imgpolygon.sh                  \
+  imgcrop/imgoutpolygon.sh imgcrop/wcspolygon.sh convertt/fitstotxt.sh       \
+  convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh           \
+  convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh convertt/fitstopdf.sh    \
+  convolve/spatial.sh convolve/frequency.sh imgwarp/imgwarp_scale.sh         \
+  imgwarp/homographic.sh mknoise/addnoise.sh mkprof/ellipticalmasks.sh       \
+  mkprof/inputascanvas.sh header/write.sh header/print.sh header/update.sh   \
+  header/delete.sh imgstat/basicstats.sh subtractsky/subtractsky.sh          \
+  noisechisel/noisechisel.sh mkcatalog/simple.sh mkcatalog/aperturephot.sh   \
+  arithmetic/snimage.sh arithmetic/onlynumbers.sh arithmetic/where.sh        \
+  arithmetic/or.sh cosmiccal/simpletest.sh table/asciitobinary.sh            \
+  table/binarytoascii.sh
 
 
 
@@ -157,5 +157,6 @@ mkcatalog/aperturephot.sh: noisechisel/noisechisel.sh.log          \
                            mkprof/inputascanvas.sh
 arithmetic/snimage.sh: noisechisel/noisechisel.sh.log
 arithmetic/where.sh: noisechisel/noisechisel.sh.log
+arithmetic/or.sh: noisechisel/noisechisel.sh.log
 arithmetic/onlynumbers.sh: prepconf.sh.log
 cosmiccal/simpletest.sh: prepconf.sh.log
