--- a/src/convertt/Makefile.am
+++ b/src/convertt/Makefile.am
@@ -19,7 +19,10 @@
 ## along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
 
-
+## Necessary flags. NOTE: $(top_srcdir)/bootstrapped/lib is only necessary
+## for internally compiled utilities and libraries. It must not be included
+## during the tests since the bootstrapped libraries are not installed.
+AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib
 
 
 ## Utility and its sources
@@ -32,8 +35,6 @@ astconvertt_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la		\
 -lgnuastro
 
 
-
-
-# To destribute the defaults file.
-# NOTE: the man page is created in doc/Makefile.am
+## The configuration file (distribute and install).
+## NOTE: the man page is created in doc/Makefile.am
 dist_sysconf_DATA = astconvertt.conf
